Filled in content and organized sections.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>HackEd</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
+
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
@@ -21,19 +23,18 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<span class="logo"><img src="images/hacked-logo.png" alt="HackEd" style="width:15%;"/></span>
+						<h1>HackEd</h1>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#about" class="active">About</a></li>
+							<li><a href="#past">Past Hacks</a></li>
+							<li><a href="#faq">FAQ</a></li>
+							<li><a href="#sponsors">Sponsors</a></li>
+							<li><a href="#apply">Apply</a></li>
 						</ul>
 					</nav>
 
@@ -45,96 +46,155 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Edmonton's Student Hackathon</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>HackEd is the annual 24-hour hackathon hosted by the Computer Engineering Club at the University of Alberta. Our goal is to bring together motivated students from diverse, interdisciplinary backgrounds and challenge them to build something awesome in a collaborative and competitive environment.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li>
+												<a href="#" class="button big apply">Apply</a>
+											</li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/hacked.jpeg" alt="" /></span>
 								</div>
+								<ul class="statistics">
+									<li class="style1">
+										<span class="icon fa-clock-o"></span>
+										<strong>24</strong> hours
+									</li>
+									<li class="style2">
+										<span class="icon fa-users"></span>
+										<strong>120+</strong>students
+									</li>
+									<li class="style3">
+										<span class="icon fa-smile-o"></span>
+										<strong>10/10</strong> best experience
+									</li>
+									<li class="style4">
+										<span class="icon fa-trophy"></span>
+										<strong>$1,000+</strong> in prizes
+									</li>
+								</ul>
 							</section>
 
-						<!-- First Section -->
-							<section id="first" class="main special">
+						<!-- About Section -->
+							<section id="about" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Build something awesome</h2>
 								</header>
 								<ul class="features">
 									<li>
-										<span class="icon major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style2 fa-lightbulb-o"></span>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style5 fa-gear"></span>
 									</li>
 									<li>
-										<span class="icon major style5 fa-diamond"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style4 fa-laptop"></span>
 									</li>
 								</ul>
+								<p>
+									Hackathons are for designing, creating and building awesome projects. Transform your crazy idea into a real working product over one weekend. Whether you’re a newbie or this ain’t your first rodeo, HackEd aims to give you the best hackathon experience with industry mentors for troubleshooting and inspiration, free swag, and cool prizes! Students from all schools, disciplines, years and experience levels are welcome.
+								</p>
+							</section>
+
+						<!-- Past Hacks -->
+							<section id="past" class="main special">
+								<header class="major">
+									<h2>Hacks from the Past</h2>
+								</header>
+								<ul class="statistics">
+									<li class="style1">
+										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
+										<strong>Project 1</strong>
+									</li>
+									<li class="style3">
+										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
+										<strong>Another one</strong>
+									</li>
+									<li class="style4">
+										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
+										<strong>Cool Project</strong>
+									</li>
+									<li class="style5">
+										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
+										<strong>Project</strong>
+									</li>
+								</ul>
+
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button">Find more on Devpost</a></li>
 									</ul>
 								</footer>
 							</section>
 
 						<!-- Second Section -->
-							<section id="second" class="main special">
+							<section id="faq" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2> Frequently Asked Questions</h2>
 								</header>
-								<ul class="statistics">
-									<li class="style1">
-										<span class="icon fa-code-fork"></span>
-										<strong>5,120</strong> Etiam
-									</li>
-									<li class="style2">
-										<span class="icon fa-folder-open-o"></span>
-										<strong>8,192</strong> Magna
-									</li>
-									<li class="style3">
-										<span class="icon fa-signal"></span>
-										<strong>2,048</strong> Tempus
-									</li>
-									<li class="style4">
-										<span class="icon fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
-									</li>
-									<li class="style5">
-										<span class="icon fa-diamond"></span>
-										<strong>1,024</strong> Nullam
-									</li>
-								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+
+								<div class="row">
+									<p class="3u faq-question" style="text-align:center">
+										<strong>
+										When and where is it?
+										</strong>
+									</p>
+									<p class="9u faq-answer">
+										The hackathon starts at noon on January 28, Saturday and ends at noon on January 29, Sunday. The event is hosted at Startup Edmonton, which is located at 301, 10359 104 St Mercer Warehouse.
+
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										<strong>Who can participate?</strong>
+									</p>
+									<p class="9u faq-answer">
+										Any student can participate! Regardless of discipline, year, experience level, high school or university, we encourage you to join us in transforming awesome ideas into real working products over the course of the weekend.
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										<strong>Who can participate?</strong>
+									</p>
+									<p class="9u faq-answer">
+										Any student can participate! Regardless of discipline, year, experience level, high school or university, we encourage you to join us in transforming awesome ideas into real working products over the course of the weekend.
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										<strong>Who can participate?</strong>
+									</p>
+									<p class="9u faq-answer">
+										Any student can participate! Regardless of discipline, year, experience level, high school or university, we encourage you to join us in transforming awesome ideas into real working products over the course of the weekend.
+									</p>
+								</div>
 							</section>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
+						<!-- Sponsors -->
+							<section id="sponsors" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
+									<h2>Sponsors</h2>
+									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
+									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<img class="icon" src="images/stacked-outline-fullcolor.png"/>
+								</header>
+
+							</section>
+
+
+						<!-- Apply -->
+							<section id="apply" class="main special">
+								<header class="major">
+									<h2>Hack With Us</h2>
 									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
 									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button special">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="generic.html" class="button special big">Apply</a></li>
+
 									</ul>
 								</footer>
 							</section>
