--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
 								</header>
 
 								<div class="row">
-									<p class="3u faq-question" style="text-align:center">
-										<strong>
+									<p class="3u faq-question">
 										When and where is it?
-										</strong>
 									</p>
 									<p class="9u faq-answer">
 										The hackathon starts at noon on January 28, Saturday and ends at noon on January 29, Sunday. The event is hosted at Startup Edmonton, which is located at 301, 10359 104 St Mercer Warehouse.
@@ -148,7 +146,7 @@
 								</div>
 								<div class="row">
 									<p class="3u faq-question">
-										<strong>Who can participate?</strong>
+										Who can participate?
 									</p>
 									<p class="9u faq-answer">
 										Any student can participate! Regardless of discipline, year, experience level, high school or university, we encourage you to join us in transforming awesome ideas into real working products over the course of the weekend.
@@ -156,18 +154,50 @@
 								</div>
 								<div class="row">
 									<p class="3u faq-question">
-										<strong>Who can participate?</strong>
+										How much does it cost?
 									</p>
 									<p class="9u faq-answer">
-										Any student can participate! Regardless of discipline, year, experience level, high school or university, we encourage you to join us in transforming awesome ideas into real working products over the course of the weekend.
+										HackEd is completely free! We’ll also be providing food to keep your energy levels up throughout the event.
 									</p>
 								</div>
 								<div class="row">
 									<p class="3u faq-question">
-										<strong>Who can participate?</strong>
+										What happens at HackEd?
 									</p>
 									<p class="9u faq-answer">
-										Any student can participate! Regardless of discipline, year, experience level, high school or university, we encourage you to join us in transforming awesome ideas into real working products over the course of the weekend.
+										You have 24 hours to work on a project, which can be based on hardware, software, or a combination of both. During the event, there will be mentors from industry and student volunteers (as well as fellow participants!) to help troubleshoot when you get stuck, or inspire you when you’re out of ideas! After the 24 hours are up, you present your work to a panel of judges.
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										Do I have to work by myself?
+									</p>
+									<p class="9u faq-answer">
+										No! You can choose to work individually or in a team. We recommend having a group of three people but the maximum you can have is five. (PS: the prizes are best split between 3 people!)
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										What should I bring?
+									</p>
+									<p class="9u faq-answer">
+										Your laptop and charger are the most important things you should have with you! Besides those, you might want to bring a change of clothes, a pillow and a blanket if you want to be comfortable for your power naps.
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										Will hardware/equipment be available to use during the event?
+									</p>
+									<p class="9u faq-answer">
+										Please contact us if you need any special hardware or equipment for your hack and we will try to work something out with you!
+									</p>
+								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										What is the hackathon schedule like?
+									</p>
+									<p class="9u faq-answer">
+										We’ll post this closer to the date so you can see a breakdown of events! We’ll also be including more info about how judging works and what kinds of prizes and categories you should look out for.
 									</p>
 								</div>
 							</section>
