--- a/index.html
+++ b/index.html
@@ -206,11 +206,14 @@
 							<section id="sponsors" class="main special">
 								<header class="major">
 									<h2>Sponsors</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-									<img class="icon" src="images/stacked-outline-fullcolor.png"/>
+									<p>Special thanks to our awesome sponsors! <br/>Interested in our sponsorship packages? Send us a message.</p>
+									<img class="icon" src="images/sponsors/startup-edmonton.png"/>
 								</header>
-
+								<footer class="major">
+									<ul class="actions">
+										<li><a href="generic.html" class="button special">Become a sponsor</a></li>
+									</ul>
+								</footer>
 							</section>
 
 
