Changed color scheme to green.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<p>HackEd is the annual 24-hour hackathon hosted by the Computer Engineering Club at the University of Alberta. Our goal is to bring together motivated students from diverse, interdisciplinary backgrounds and challenge them to build something awesome in a collaborative and competitive environment.</p>
 										<ul class="actions">
 											<li>
-												<a href="#" class="button big apply">Apply</a>
+												<a href="#" class="button big special">Apply</a>
 											</li>
 										</ul>
 									</div>
@@ -108,15 +108,15 @@
 										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
 										<strong>Project 1</strong>
 									</li>
-									<li class="style3">
+									<li class="style2">
 										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
 										<strong>Another one</strong>
 									</li>
-									<li class="style4">
+									<li class="style3">
 										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
 										<strong>Cool Project</strong>
 									</li>
-									<li class="style5">
+									<li class="style4">
 										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
 										<strong>Project</strong>
 									</li>
@@ -124,7 +124,7 @@
 
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Find more on Devpost</a></li>
+										<li><a href="generic.html" class="button special">Find more on Devpost</a></li>
 									</ul>
 								</footer>
 							</section>
