Edited footer for contact info.

--- a/index.html
+++ b/index.html
@@ -221,13 +221,11 @@
 							<section id="apply" class="main special">
 								<header class="major">
 									<h2>Hack With Us</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions">
-										<li><a href="generic.html" class="button special big">Apply</a></li>
-
+										<li><a href="#" class="button special big">Apply</a></li>
+										<li><a href="mailto:hacked@compeclub.com" class="button big">Questions?</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -237,34 +235,33 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Did you know?</h2>
+							<p>HackEd is part of our faculty's ECE Week, to connect Electrical, Computer and Engineering Physics students with industry.</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
+								<li><a href="http://eceweek.compeclub.com" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto:hacked@compeclub.com">hacked@compeclub.com</a></dd>
+								<dt>Address</dt>
+								<dd>ETLC 2-040M (first right in clubs hallway) <br/> University of Alberta <br/>Edmonton, AB
+</dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
+								<li><a href="http://twitter.com/CompEClub" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
+								<li><a href="http://facebook.com/" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
+								<li><a href="http://devpost.com" class="icon fa-laptop alt"><span class="label">Devpost</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; University of Alberta Computer Engineering Club. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
+
+			<a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:50px;top:0;width:10%;z-index:10000" href="https://mlh.io/seasons/na-2017/events?utm_source=na-2017&utm_medium=TrustBadge&utm_campaign=na-2017&utm_content=white" target="_blank"><img src="https://s3.amazonaws.com/logged-assets/trust-badge/2017/white.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
