Added MLH Code of Conduct, fixed button hover css.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>HackEd</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/hacked-logo.png" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/custom.css" />
@@ -137,7 +138,7 @@
 
 								<div class="row">
 									<p class="3u faq-question">
-										When and where is it?
+										When and where is the hackathon?
 									</p>
 									<p class="9u faq-answer">
 										The hackathon starts at noon on January 28, Saturday and ends at noon on January 29, Sunday. The event is hosted at Startup Edmonton, which is located at 301, 10359 104 St Mercer Warehouse.
@@ -200,6 +201,14 @@
 										We’ll post this closer to the date so you can see a breakdown of events! We’ll also be including more info about how judging works and what kinds of prizes and categories you should look out for.
 									</p>
 								</div>
+								<div class="row">
+									<p class="3u faq-question">
+										What's that banner at the top that says MLH - Season 17?
+									</p>
+									<p class="9u faq-answer">
+										<a href="https://mlh.io/"><strong>Major League Hacking</strong> (MLH)</a> is a student hackathon league. This is our first year as an MLH event! We abide by their <a href="https://static.mlh.io/docs/mlh-code-of-conduct.pdf"><strong>Code of Conduct</strong></a> so please give it a read before you register for the event!
+									</p>
+								</div>
 							</section>
 
 						<!-- Sponsors -->
@@ -236,7 +245,7 @@
 					<footer id="footer">
 						<section>
 							<h2>Did you know?</h2>
-							<p>HackEd is part of our faculty's ECE Week, to connect Electrical, Computer and Engineering Physics students with industry.</p>
+							<p>HackEd is part of our faculty's ECE Week, a week-long event that connects Electrical, Computer and Engineering Physics students with industry.</p>
 							<ul class="actions">
 								<li><a href="http://eceweek.compeclub.com" class="button">Learn More</a></li>
 							</ul>
@@ -248,7 +257,7 @@
 								<dd><a href="mailto:hacked@compeclub.com">hacked@compeclub.com</a></dd>
 								<dt>Address</dt>
 								<dd>ETLC 2-040M (first right in clubs hallway) <br/> University of Alberta <br/>Edmonton, AB
-</dd>
+								</dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="http://twitter.com/CompEClub" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
