Changed About page feaut page featured images and Past Hacks page.

--- a/index.html
+++ b/index.html
@@ -81,19 +81,20 @@
 						<!-- About Section -->
 							<section id="about" class="main special">
 								<header class="major">
-									<h2>Build something awesome</h2>
+									<h2>Design, Create, Build</h2>
 								</header>
-								<ul class="features">
-									<li>
-										<span class="icon major style2 fa-lightbulb-o"></span>
-									</li>
-									<li>
-										<span class="icon major style5 fa-gear"></span>
-									</li>
-									<li>
-										<span class="icon major style4 fa-laptop"></span>
-									</li>
-								</ul>
+								<span class="feature">
+									<span class="image">
+										<img src="images/featured1.jpg"/>
+									</span>
+									<span class="image">
+										<img src="images/featured2.jpg"/>
+									</span>
+									<span class="image">
+										<img src="images/featured3.jpg"/>
+									</span>
+								</span>
+
 								<p>
 									Hackathons are for designing, creating and building awesome projects. Transform your crazy idea into a real working product over one weekend. Whether you’re a newbie or this ain’t your first rodeo, HackEd aims to give you the best hackathon experience with industry mentors for troubleshooting and inspiration, free swag, and cool prizes! Students from all schools, disciplines, years and experience levels are welcome.
 								</p>
@@ -103,8 +104,20 @@
 							<section id="past" class="main special">
 								<header class="major">
 									<h2>Hacks from the Past</h2>
+									<p>Check out the submissions on Devpost from our past hackathons.</p>
 								</header>
-								<ul class="statistics">
+								<ul class="features">
+									<li>
+										<a href="http://hacked-fall-2016.devpost.com"><span class="icon major style4 fa-lightbulb-o"></span></a>
+										<p>HackEd Fall 2016</p>
+									</li>
+									<li>
+										<a href="http://hacked2016.devpost.com"><span class="icon major style4 fa-wrench"></a>
+										<p>HackEd 2016</p>
+									</li>
+								</ul>
+								<!-- OR: we could feature a few on the site -->
+								<!-- <ul class="statistics">
 									<li class="style1">
 										<img src="images/geolocation-ecommerce.jpg" width="100%"/>
 										<strong>Project 1</strong>
@@ -127,7 +140,7 @@
 									<ul class="actions">
 										<li><a href="generic.html" class="button special">Find more on Devpost</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 
 						<!-- Second Section -->
